# credit-risk-classifier

./: .gitignore  README.md  pyproject.toml
models/: balancing_config.json  candidates_summary.json
notebooks/: 00_dicionario_de_dados.md  01_data cleaning.ipynb  01_data_cleaning.ipynb  02_analise_exploratoria.ipynb  03_feature_engineering.ipynb  04_balanceamento.ipynb  05_modelagem.ipynb
