[project]
name = "credit-risk-classifier"
version = "0.1.0"
description = "Projeto de ciência de dados para classificar clientes que podem apresentar inadimplência em dois anos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
