[project]
name = "credit-risk-classifier"
version = "0.1.0"
description = "Projeto de ciência de dados para classificar clientes que podem apresentar inadimplência em dois anos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flaml>=2.5.0",
    "imbalanced-learn>=0.12.0",
    "ipykernel>=6.29.0",
    "jinja2>=3.1.0",
    "lightgbm>=4.3.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.3,<1.5",
    "scipy>=1.11,<1.13",
    "seaborn>=0.13.0",
    "xgboost>=2.0.0",
]
